Updated resume details

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         src="resources/images/logos/github_logo.svg" alt=""></a>
             </li>
 
-            <li class="list-inline-item ml-2"><a href="https://www.linkedin.com/in/chinmaykude/" target="blank"><img
+            <li class="list-inline-item ml-2"><a href="https://www.linkedin.com/in/chinmay-kude/" target="blank"><img
                         src="resources/images/logos/linkedin_logo.svg" alt=""></a>
             </li>
 
