minor updates made

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ The code starts below .. :)
         <h5 class="profession-head-font text-muted mt-3 mb-4" ><strong>Front End Developer & Open Source Contributor</strong></h5>
         <ul class="list-inline mt-3 mb-4 justify-content-center color-light-grey" >
             <li class="list-inline-item text-muted col-lg-3 col-md-3 col-sm-12"><i class="fa fa-map-marker color-529ceb"
-                    ></i><strong class="kodchasan-font"> Bangalore, India</strong>
+                    ></i><strong class="kodchasan-font"> Bengaluru, India</strong>
             </li>
             <li class="list-inline-item text-muted col-lg-3 col-md-3 col-sm-12"><i class="fa fa-phone-alt color-529ceb" aria-hidden="true"
                     ></i>
@@ -108,7 +108,7 @@ The code starts below .. :)
         </ul>
 
         <p class="text-center text-muted mb-4 kodchasan-font color-light-grey">
-            I'm a Bangalore based Front End Developer and an Open Source Contributor to redux library. <br>
+            I'm a Bangalore based Front End Developer and Open Source Contributor to redux library. <br>
             Coder who focuses on writing clean, elegant and efficient code.&nbsp;
             <br><br>
             <a href="https://drive.google.com/open?id=17ey19IcKFA1ns69WbN000UccJ95xFDWB" target="blank" class='mb-2'>
