Deployed github finder

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ The code starts below .. :)
                             </div>
                         </div>
                         <div class="card-footer d-flex justify-content-around mt-2">
-                            <a href="https://github.com/chinmaykude" target="_blank"><button
+                            <a href="https://github-profile-finder.now.sh" target="_blank"><button
                                     class="btn bg-primary text-light"><i class="fa fa-link" aria-hidden="true"></i>
                                     More Info</button></a>
                         </div>
