Updating github code repos links

--- a/index.html
+++ b/index.html
@@ -248,9 +248,14 @@ The code starts below .. :)
                             </div>
                         </div>
                         <div class="card-footer d-flex justify-content-around mt-1">
+                            <a href="https://github.com/chinmaykude/atithi-visitor-management-system"
+                                target="_blank"><button class="btn bg-primary text-light"><i class="fab fa-github"
+                                        aria-hidden="true"></i>
+                                    Code</button></a>
                             <a href="https://atithi-visitor-management-system.now.sh" target="_blank"><button
                                     class="btn bg-primary text-light"><i class="fa fa-link" aria-hidden="true"></i>
-                                    More Info</button></a>
+                                    Website</button></a>
+
                         </div>
                     </div>
                 </div>
@@ -281,9 +286,12 @@ The code starts below .. :)
                             </div>
                         </div>
                         <div class="card-footer d-flex justify-content-around mt-2">
-                            <a href="https://github.com/masai-course/hackathon-20-02-21-b-3" target="_blank"><button
+                            <a href="https://github.com/chinmaykude/being-responsible" target="_blank"><button
+                                    class="btn bg-primary text-light"><i class="fab fa-github" aria-hidden="true"></i>
+                                    Code</button></a>
+                            <a href="https://being-responsible-hackathon-project.now.sh/" target="_blank"><button
                                     class="btn bg-primary text-light"><i class="fa fa-link" aria-hidden="true"></i>
-                                    More Info</button></a>
+                                    Website</button></a>
                         </div>
                     </div>
                 </div>
@@ -310,9 +318,12 @@ The code starts below .. :)
                             </div>
                         </div>
                         <div class="card-footer d-flex justify-content-around mt-4">
+                            <a href="https://github.com/chinmaykude/simple-currency-converter" target="_blank"><button
+                                    class="btn bg-primary text-light"><i class="fab fa-github" aria-hidden="true"></i>
+                                    Code</button></a>
                             <a href="https://simple-currency-converter.now.sh/" target="_blank"><button
                                     class="btn bg-primary text-light"><i class="fa fa-link" aria-hidden="true"></i>
-                                    More Info</button></a>
+                                    Website</button></a>
                         </div>
                     </div>
                 </div>
@@ -335,13 +346,17 @@ The code starts below .. :)
                                     class="px-1 ht-25" alt="">
                                 <img src="https://cdn.svgporn.com/logos/bootstrap.svg" class="px-1 ht-25" alt="">
                                 <img src="https://cdn.svgporn.com/logos/javascript.svg" class="px-1 ht-25" alt="">
-                                <img src="https://cdn.svgporn.com/logos/jquery.svg" class="px-1 ht-25" alt="">
+
                             </div>
                         </div>
                         <div class="card-footer d-flex justify-content-around mt-2">
+                            <a href="https://github.com/chinmaykude/react-microsoft-website-static-webpage"
+                                target="_blank"><button class="btn bg-primary text-light"><i class="fab fa-github"
+                                        aria-hidden="true"></i>
+                                    Code</button></a>
                             <a href="https://microsoft-static-webpage.now.sh" target="_blank"><button
                                     class="btn bg-primary text-light"><i class="fa fa-link" aria-hidden="true"></i>
-                                    More Info</button></a>
+                                    Website</button></a>
                         </div>
                     </div>
                 </div>
@@ -356,19 +371,23 @@ The code starts below .. :)
                             <h5 class="font-weight-bold">Git Hub Profile Finder</h5>
                             <h6 class="pb-3">In this Project we can search for user profile on github. </h6>
                             <div class="mt-1">
-                                <img src="https://cdn.svgporn.com/logos/react.svg" class="px-1 ht-25" alt="react logo">
+
                                 <img src="https://cdn3.iconfinder.com/data/icons/popular-services-brands/512/html5-512.png"
                                     class="px-1 ht-25" alt="">
                                 <img src="https://cdn.pixabay.com/photo/2017/08/05/11/16/logo-2582747_960_720.png"
                                     class="px-1 ht-25" alt="">
                                 <img src="https://cdn.svgporn.com/logos/bootstrap.svg" class="px-1 ht-25" alt="">
                                 <img src="https://cdn.svgporn.com/logos/javascript.svg" class="px-1 ht-25" alt="">
+                                <img src="https://cdn.svgporn.com/logos/jquery.svg" class="px-1 ht-25" alt="">
                             </div>
                         </div>
                         <div class="card-footer d-flex justify-content-around mt-2">
+                            <a href="https://github.com/chinmaykude/github-profile-finder" target="_blank"><button
+                                    class="btn bg-primary text-light"><i class="fab fa-github" aria-hidden="true"></i>
+                                    Code</button></a>
                             <a href="https://github-profile-finder.now.sh" target="_blank"><button
                                     class="btn bg-primary text-light"><i class="fa fa-link" aria-hidden="true"></i>
-                                    More Info</button></a>
+                                    Website</button></a>
                         </div>
                     </div>
                 </div>
@@ -392,8 +411,13 @@ The code starts below .. :)
                             </div>
                         </div>
                         <div class="card-footer d-flex justify-content-around mt-2">
-                            <a href="https://apple-static-routing.now.sh"><button class="btn bg-primary text-light"><i
-                                        class="fa fa-link" aria-hidden="true"></i> More Info</button></a>
+                            <a href="https://github.com/chinmaykude/react-routing-apple-static-page"
+                                target="_blank"><button class="btn bg-primary text-light"><i class="fab fa-github"
+                                        aria-hidden="true"></i>
+                                    Code</button></a>
+                            <a href="https://apple-static-routing.now.sh" target="_blank"><button
+                                    class="btn bg-primary text-light"><i class="fa fa-link" aria-hidden="true"></i>
+                                    Website</button></a>
                         </div>
                     </div>
                 </div>
@@ -448,7 +472,9 @@ The code starts below .. :)
             Recently contributed to redux-toolkit <a href="https://github.com/reduxjs/redux-toolkit/pull/554"
                 target="_blank" style="text-decoration: none"><small>(PR#554)</small></a>, redux <a
                 href="https://github.com/reduxjs/redux/pull/3750" target="_blank"
-                style="text-decoration: none"><small>(PR#3750)</small></a> libraries.<br>
+                style="text-decoration: none"><small>(PR#3750)</small></a>, reactjs <a
+                href="https://github.com/reactjs/reactjs.org/pull/2985" target="_blank"
+                style="text-decoration: none"><small>(PR#2985)</small></a> libraries.<br>
         </h4>
         <h4 class="kodchasan-font" style="color: #707070;"><a href="https://github.com/chinmaykude"
                 target="_blank">@chinmaykude on GitHub</a></h4>
