minor updates in description

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ The code starts below .. :)
             </ul>
 
             <p class="text-center text-muted mb-4 kodchasan-font color-light-grey">
-                I'm a Bangalore based Front End Developer and Open Source Contributor to redux library. <br>
+                I'm a Bangalore based Front End Developer and Open Source Contributor. <br>
                 Coder who focuses on writing clean, elegant and efficient code.&nbsp;
                 <br><br>
                 <a href="https://drive.google.com/open?id=17ey19IcKFA1ns69WbN000UccJ95xFDWB" target="blank"
