--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@ The code starts below .. :)
                     Contributor</strong></h5>
             <ul class="list-inline mt-3 mb-4 justify-content-center color-light-grey">
                 <li class="list-inline-item text-muted col-lg-3 col-md-3 col-sm-12"><i
-                        class="fa fa-map-marker color-529ceb"></i><strong class="kodchasan-font"> Bengaluru,
-                        India</strong>
+                        class="fa fa-map-marker color-529ceb"></i><strong class="kodchasan-font"> Houston,
+                        Texas</strong>
                 </li>
                 <li class="list-inline-item text-muted col-lg-3 col-md-3 col-sm-12"><i
                         class="fa fa-phone-alt color-529ceb" aria-hidden="true"></i>
-                    <strong><a href="tel:+91 8421615544" class="color-light-grey kodchasan-font">+91
-                            8421615544</a></strong></li>
+                    <strong><a href="tel:+1 (346) 604-2579" class="color-light-grey kodchasan-font">+1
+                            (346) 604-2579</a></strong></li>
                 <li class="list-inline-item text-muted col-lg-3 col-md-3 col-sm-12"><i
                         class="fa fa-envelope color-529ceb"></i>
                     <a href="mailto:chinmaykude@outlook.com" target="_top"
@@ -110,10 +110,10 @@ The code starts below .. :)
             </ul>
 
             <p class="text-center text-muted mb-4 kodchasan-font color-light-grey">
-                I'm a Bangalore based Front End Developer and Open Source Contributor. <br>
+                I'm a US based Senior React Developer and Open Source Contributor. <br>
                 Coder who focuses on writing clean, elegant and efficient code.&nbsp;
                 <br><br>
-                <a href="https://drive.google.com/open?id=17ey19IcKFA1ns69WbN000UccJ95xFDWB" target="blank"
+                <a href="https://1drv.ms/w/s!AqJLpvs10TrtgzY4ZcI_Yqc3xhNw" target="blank"
                     class='mb-2'>
                     <button class="btn bg-529ceb color-white"> Download Resume </button>
                 </a></p>
