--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ The code starts below .. :)
         <!-- Introduction -->
         <div class="text-center mt-5 bg-black">
             <h1 class="mb-1 intro-font"><strong>Chinmay Kude&nbsp;</strong></h1>
-            <h5 class="profession-head-font text-muted mt-3 mb-4"><strong>Front End Developer & Open Source
+            <h5 class="profession-head-font text-muted mt-3 mb-4"><strong>Senior React Developer & Open Source
                     Contributor</strong></h5>
             <ul class="list-inline mt-3 mb-4 justify-content-center color-light-grey">
                 <li class="list-inline-item text-muted col-lg-3 col-md-3 col-sm-12"><i
