--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ ________________________________________________________________________________
 
 Cheers
 Chinmay Kude
-mailto: chinmaykude@outlook.com
+mailto: chinmay.kude@outlook.com
 ________________________________________________________________________________________
 
 I sincerely admit ! Not everything thing you saw on the website was developed by me from
@@ -86,8 +86,8 @@ The code starts below .. :)
                             (346) 604-2579</a></strong></li>
                 <li class="list-inline-item text-muted col-lg-3 col-md-3 col-sm-12"><i
                         class="fa fa-envelope color-529ceb"></i>
-                    <a href="mailto:chinmaykude@outlook.com" target="_top"
-                        class="color-light-grey kodchasan-font"><strong>chinmaykude@outlook.com</strong></a></li>
+                    <a href="mailto:chinmay.kude@outlook.com" target="_top"
+                        class="color-light-grey kodchasan-font"><strong>chinmay.kude@outlook.com</strong></a></li>
             </ul>
             <ul>
                 <li class="list-inline-item "><a href="https://www.github.com/chinmaykude/" target="blank"><img
@@ -113,7 +113,7 @@ The code starts below .. :)
                 I'm a US based Senior React Developer and Open Source Contributor. <br>
                 Coder who focuses on writing clean, elegant and efficient code.&nbsp;
                 <br><br>
-                <a href="https://1drv.ms/w/s!AqJLpvs10TrtgzY4ZcI_Yqc3xhNw" target="blank"
+                <a href="https://1drv.ms/w/s!AqJLpvs10Trtgzh8rkejvQhWqtzf?e=5k8EWa" target="blank"
                     class='mb-2'>
                     <button class="btn bg-529ceb color-white"> Download Resume </button>
                 </a></p>
